z-index - max value - fixed

--- a/src/btnStyle.css
+++ b/src/btnStyle.css
@@ -123,16 +123,13 @@
 .bitbtn-modal-container {
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
-
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-
     display: none;
-
-    z-index: 1;
+    z-index: 2147483647; /*max value*/
     padding-top: 100px;
     overflow: auto;
 }
@@ -203,7 +200,6 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    z-index: 2147483647; /*max value*/
 }
 
 .bitbtn-modal-container .wallet-list .wallet-item {
